# BM11MLPF

./: .gitignore  BM11MLPF.jucer  CMakeLists.txt  README.md
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: BM11MLPFAudioProcessor.cpp  BM11MLPFAudioProcessor.h  BM11MLPFAudioProcessorEditor.cpp  BM11MLPFAudioProcessorEditor.h
